--- a/Backend/eMuzyka/appsettings.json
+++ b/Backend/eMuzyka/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "connStringAzure": "Data Source=gamerx.database.windows.net; Initial Catalog=Gamerx; User ID=seev; Password=Skoki987!; Connect Timeout=60; Encrypt=True; TrustServerCertificate=False; ApplicationIntent=ReadWrite; MultiSubnetFailover=False;"
+  }
 }
