Change connection string to correct database

--- a/Backend/eMuzyka/appsettings.json
+++ b/Backend/eMuzyka/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connStringAzure": "Data Source=gamerx.database.windows.net; Initial Catalog=Gamerx; User ID=seev; Password=Skoki987!; Connect Timeout=60; Encrypt=True; TrustServerCertificate=False; ApplicationIntent=ReadWrite; MultiSubnetFailover=False;"
+    "connStringAzure": "Data Source=gamerx.database.windows.net; Initial Catalog=eMuzyka; User ID=seev; Password=Skoki987!; Connect Timeout=60; Encrypt=True; TrustServerCertificate=False; ApplicationIntent=ReadWrite; MultiSubnetFailover=False;"
   }
 }
