--- a/Backend/eMuzyka/eMuzyka.csproj
+++ b/Backend/eMuzyka/eMuzyka.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -18,7 +18,6 @@
   <ItemGroup>
     <Folder Include="DTO\Album\" />
     <Folder Include="DTO\Track\" />
-    <Folder Include="DTO\Provider\" />
   </ItemGroup>
 
 </Project>
