Update NLog configuration

--- a/Backend/eMuzyka/nlog.config
+++ b/Backend/eMuzyka/nlog.config
@@ -13,10 +13,10 @@
 	
 	<targets>
 		<!-- write logs to file  -->
-		<target xsi:type="File" name="logfile" fileName="${basedir}/logs-${shortdate}.log"
+		<target xsi:type="File" name="logfile" fileName="${basedir}/logs/alllogs-${shortdate}.log"
 		        layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 
-		<target xsi:type="File" name="errorfile" fileName="${basedir}/logs-${shortdate}.log"
+		<target xsi:type="File" name="errorfile" fileName="${basedir}/logs/errorlogs-${shortdate}.log"
 		        layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 
 	</targets>
@@ -25,6 +25,7 @@
 	<rules>
 		<!--All logs, including from Microsoft-->
 		<logger name="*" minlevel="Trace" writeTo="logfile" />
+		<logger name="*" minlevel="Warning" writeTo="errorfile" />
 
 	</rules>
 </nlog>
