Extract Entities directory to new Domain project

--- a/Backend/eMuzyka/appsettings.json
+++ b/Backend/eMuzyka/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "connStringAzure": "Data Source=gamerx.database.windows.net; Initial Catalog=eMuzyka; User ID=seev; Password=Skoki987!; Connect Timeout=60; Encrypt=True; TrustServerCertificate=False; ApplicationIntent=ReadWrite; MultiSubnetFailover=False;"
-  }
+  },
+
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtExpireInDays": 15,
+    "JwtIssuer":  "api.emuzyka.pl" 
+  } 
 }
