[Hotfix] Update CORS Policy Origin to Azure domain

--- a/Backend/eMuzyka/appsettings.json
+++ b/Backend/eMuzyka/appsettings.json
@@ -13,7 +13,7 @@
 
   "Authentication": {
     "JwtKey": "PRIVATE_KEY_DONT_SHARE",
-    "JwtExpireInDays": 15,
-    "JwtIssuer":  "api.emuzyka.pl" 
+    "JwtExpireInDays": 30,
+    "JwtIssuer": "api-emuzyka.azurewebsites.net"
   } 
 }
